ncc/testsuite/negative/recursive-type-1.n
using System;
using System.Console;
using Nemerle.Utility;

public module Program //E: the type .T. must be a value type in order to use it as type parameter
{
  Main() : void { }
  
  public IsNull[T](this _x : T) : bool //E: recursive type or recursive constraint detected.+Nullable
    where T: Nullable[T]
  {
    false
  }
}